Renaming and add requirements.txt

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,13 @@ outputs/
 plot/
 Dataset/
 Tasks/
-Test/
+Tests/
 
 command.txt
 evaluate.txt
 
 deepspeech-0.9.3-models.pbmm
 deepspeech-0.9.3-models.scorer
+
+requirement.txt
 
